demoroute.yaml
apiVersion: portal.gloo.solo.io/v1beta1
kind: Route
metadata:
  name: demoroute
  namespace: gloo-portal
  resourceVersion: '1'
spec:
  backends:
  - upstream:
      name: default-petstore-8080
      namespace: gloo-system
  options:
    hostRewrite: abc.com
